--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test-only": "bash -c 'jest --watch --coverage --verbose --collectCoverageFrom=\"**/*$1*\" $1' -- ",
     "watch-main": "rollup -cw --environment DEST:main",
     "watch-pserver": "rollup -cw --environment DEST:pserver",
-    "watch-sim": "rollup -cw --environment DEST:sim"
+    "watch-sim": "rollup -cw --environment DEST:sim",
+    "watch-local": "rollup -c --environment DEST:local"
   },
   "repository": {
     "type": "git",
