--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -31,6 +31,16 @@
         "console": "integratedTerminal",
         "internalConsoleOptions": "neverOpen",
         "port": 9229
+      },
+      {
+        "name": "current TS file",
+        "type": "node",
+        "request": "launch",
+        "args": ["${relativeFile}"],
+        "sourceMaps": true,
+        "cwd": "${workspaceRoot}",
+        "protocol": "inspector",
       }
     ]
   }
+
