--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,10 @@
     "editor.formatOnSave": true
   },
   "[typescript]": {
-    "editor.formatOnSave": true
+    "editor.formatOnSave": true,
+    "editor.codeActionsOnSave": {
+      "source.fixAll": true
+    }
+
   }
 }
