--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "eslint-import-resolver-typescript": "^2.4.0",
     "eslint-plugin-import": "^2.24.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "jest": "^29.3.1",
     "lodash": "^3.10.1",
     "mocha": "^5.2.0",
     "prettier": "^2.3.2",
