--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "push-pserver": "rollup -c --environment DEST:pserver",
     "push-season": "rollup -c --environment DEST:season",
     "push-sim": "rollup -c --environment DEST:sim",
-    "test": "npm run test-unit",
+    "test": "jest",
     "test-unit": "mocha test/unit/**/*.ts",
     "test-integration": "echo 'See docs/in-depth/testing.md for instructions on enabling integration tests'",
     "watch-main": "rollup -cw --environment DEST:main",
@@ -63,7 +63,7 @@
     "screeps-jest": "^2.0.2",
     "sinon": "^6.3.5",
     "sinon-chai": "^3.2.0",
-    "ts-node": "^10.2.0",
+    "ts-node": "^10.9.1",
     "tsconfig-paths": "^3.10.1",
     "typescript": "^4.3.5"
   },
