--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "screeps-jest": "^2.0.2",
     "sinon": "^6.3.5",
     "sinon-chai": "^3.2.0",
+    "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^3.10.1",
     "typescript": "^4.3.5"
