--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "node": "14.x"
   },
   "devDependencies": {
+    "@jest/globals": "^29.3.1",
     "@rollup/plugin-commonjs": "^20.0.0",
     "@rollup/plugin-node-resolve": "^13.0.4",
     "@types/chai": "^4.1.6",
